app/assets/stylesheets/frontend/components/_petitions.scss
@use "sass:map";
@use "../settings" as *;
@use "../helpers" as *;
@use "../lists" as *;

.petition-items {
  @include responsive-margin(8, top);
  @include responsive-padding(8, bottom);

  border-bottom: 1px solid $border-colour;

  &:last-child {
    border-bottom: none;
  }

  ul {
    display: flex;
    flex-direction: column;
    gap: spacing(5);

    @include media-query($from: tablet) {
      gap: spacing(7);
    }

    @include media-query($from: laptop) {
      flex-direction: row;
    }

    li {
      @include responsive-padding(5, all);

      border: 1px solid $border-colour;
      border-radius: 8px;

      flex-grow: 1;
      flex-basis: 0;

      display: flex;
      flex-direction: column;
      justify-content: space-between;

      @include media-query($from: laptop) {
        max-width: calc((map.get($breakpoint-max-widths, laptop) - 60px) / 2);
      }

      @include media-query($from: desktop) {
        max-width: calc((map.get($breakpoint-max-widths, desktop) - 60px) / 2);
      }

      h3 {
        @include font-size(22);

        margin: 0;
        text-wrap: balance;

        a {
          display: block;
        }

        & + div.wrapper {
          @include responsive-margin(4, top);
        }
      }

      blockquote {
        flex: 2;
        display: flex;
        flex-direction: column;

        @include responsive-margin(5, top);

        margin-bottom: 0;
        padding: spacing(3) spacing(4);

        & > small {
          @include font-size(18);
          display: block;
        }

        & > p {
          @include font-size(20);
          @include responsive-margin(3, top);
          @include responsive-margin(3, bottom);

          color: $text-colour;

          &:before {
            content: open-quote;
            display: inline;
          }

          &:after {
            content: close-quote;
            display: inline;
          }
        }
      }

      hr {
        @include responsive-margin(6, top);
        @include responsive-margin(5, bottom);
      }

      a[rel=external] {
        display: block;
        margin-bottom: spacing(3);

        @include media-query($from: mobile) {
          display: inline;
          margin-bottom: 0;
        }
      }

      p.signature-count {
        @include font-size(22);
        @include responsive-margin(5, top);
        @include responsive-padding(4, top);

        border-top: 1px solid $border-colour;
        margin-bottom: 0;

        span {
          @include font-size(33);

          color: $colour-black;
          font-weight: bold;
          display: block;
        }
      }
    }
  }
}

.petition-item {
  h2 {
    @include font-size(27);
    @include responsive-margin(3, bottom);

    a {
      display: block;
    }
  }

  p {
    @include font-size(20);
    @include responsive-margin(2, top);
    @include responsive-margin(2, bottom);
  }

  dl {
    @include font-size(22);
    @include responsive-margin(4, top);
    @include responsive-margin(2, bottom);

    dt {
      font-weight: bold;
      margin: 0;
      padding: 0;

      @include responsive-margin(3, right);
    }

    dd {
      margin: 0;
      padding: 0;
    }

    div {
      display: flex;

      @include responsive-margin(1, bottom);
    }
  }
}

.petition-detail {
  margin-top: 0;

  h1 {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
  }

  hr {
    @include responsive-margin(6, top);
    @include responsive-margin(6, bottom);
  }

  blockquote {
    h2 {
      @extend %h3;

      &:first-child {
        margin-top: 0;
      }
    }
  }

  footer {
    @include responsive-margin(8, top);

    h2 {
      @extend %h3;

      &:first-child {
        margin-top: 0;
      }
    }
  }
}

.tag {
  @include font-size(22);

  border-radius: $button-border-radius;
  font-weight: normal !important;
  margin: 0 0 spacing(3) 0;
  padding: spacing(2) spacing(3);
}

.tag-grey {
  background-color: $colour-grey-6;
  color: $colour-grey-2;
}

.tag-red {
  background-color: $colour-error-light;
  color: $colour-error-dark;
}

.tag-green {
  background-color: #CCE2D8;
  color: #005A30;
}

.petition-timeline {
  & > h2 {
    @include font-size(27);
  }

  & > ul {
    @include responsive-margin(7, bottom);

    & > li {
      @include responsive-margin(6, bottom);

      padding-left: 40px;
      position: relative;

      @include media-query($from: tablet) {
        padding-left: 50px;
      }

      strong {
        white-space: nowrap;
      }

      time {
        @include font-size(22);
        @include responsive-margin(4, bottom);

        display: block;
      }

      h3 {
        @include font-size(22);
      }

      ul, ol, p {
        @include font-size(20);
      }

      p:not(:last-child) {
        @include responsive-margin(4, bottom);
      }

      iframe, lite-youtube {
        display: block;
        width: 100%;
        aspect-ratio: calc(560/315);

        @include responsive-margin(6, top);
        @include responsive-margin(6, bottom);
      }

      .video-fallback {
        aspect-ratio: calc(560/315);
        display: flex;
        justify-content: center;
        align-items: center;
        flex-direction: column;
        gap: 1em;
        padding: 1em;
        background-color: #000;
        color: #fff;
        text-decoration: none;

        @include responsive-margin(6, top);
        @include responsive-margin(6, bottom);
      }

      details {
        summary {
          @include font-size(20);

          display: inline-block;
          color: $interactive-colour;
          cursor: pointer;
          padding-right: 22px;
          position: relative;
          text-decoration: underline;

          &::after {
            content: "";
            border-bottom: 2px solid $interactive-colour;
            border-right: 2px solid $interactive-colour;
            position: absolute;
            top: 4px;
            right: 3px;
            width: 11px;
            height: 11px;
            transform: rotate(45deg);
          }

          &:hover:not(:focus) {
            color: $interactive-hover-colour;

            &::after {
              border-bottom: 2px solid $interactive-hover-colour;
              border-right: 2px solid $interactive-hover-colour;
            }
          }

          &:focus {
            @extend %focused-text;

            &::after {
              border-bottom: 2px solid $focus-colour;
              border-right: 2px solid $focus-colour;
            }
          }
        }

        & > div {
          @include responsive-margin(2, top);
          @include responsive-padding(5, top);

          ul {
            @extend %bulleted-list;
          }

          ol {
            @extend %numbered-list;
          }

          blockquote {
            @include responsive-margin(4, top);
            @include responsive-margin(4, bottom);

            padding-top: 0;
            padding-bottom: 0;
          }
        }

        &[open] {
          summary {
            &::after {
              top: 10px;
              transform: rotate(225deg);
            }
          }
        }
      }

      .response-details {
        details {
          summary {
            & > span {
              display: none;
            }

            &::before {
              content: "Read the response in full"
            }
          }

          &[open] {
            summary {
              &::before {
                content: "Hide full response"
              }
            }
          }
        }
      }

      .response-summary {
        @include responsive-margin(4, bottom);

        p {
          @include font-size(22);

          &:before {
            content: open-quote;
            display: inline;
          }

          &:after {
            content: close-quote;
            display: inline;
          }
        }
      }

      & > div {
        border: 1px solid $border-colour;
        border-radius: 8px;

        @include responsive-padding(5, all);
      }

      &::before {
        content: "";
        border-left: 1px solid $border-colour;
        position: absolute;
        bottom: 0;
        width: 0;
        top: 25px;
        left: 13px;

        @include media-query($from: tablet) {
          top: 28px;
          left: 15px;
        }
      }

      &::after {
        background-color: $border-colour;
        border-radius: 50%;
        content: "";
        position: absolute;
        left: 8px;
        top: 6px;
        width: 11px;
        height: 11px;

        @include media-query($from: tablet) {
          left: 8px;
          top: 5px;
          width: 15px;
          height: 15px;
        }
      }

      &:first-child {
        &::before {
          top: 28px;

          @include media-query($from: tablet) {
            top: 31px;
          }
        }

        &::after {
          background-color: $interactive-colour;
          left: 5px;
          top: 3px;
          width: 17px;
          height: 17px;

          @include media-query($from: tablet) {
            left: 5px;
            top: 2px;
            width: 21px;
            height: 21px;
          }
        }
      }
    }
  }
}

#signature-count {
  @include responsive-margin(6, top);

  .signature-count-number {
    @include font-size(44);

    color: $theme-colour;
    font-weight: bold;

    .number {
      @include font-size(33);
    }

    .text {
      @include font-size(22);
      font-weight: normal;
    }
  }

  .signature-count-progress {
    display: block;
    margin: 0;
    padding: 0;

    progress[value] {
      -moz-appearance: none;
      -webkit-appearance: none;
      appearance: none;
      display: block;

      height: 25px;
      width: 100%;

      border: 2px solid transparent;
      background-color: $colour-grey-4;
      overflow: visible;

      &::-moz-progress-bar {
        background-color: $colour-blue;
        box-sizing: content-box;
        border: 2px solid transparent;
        margin: -2px;
        height: 25px;
      }

      &::-webkit-progress-value {
        background-color: $colour-blue;
        box-sizing: content-box;
        border: 2px solid transparent;
        margin: -2px;
        height: 21px;
      }

      &::-webkit-progress-bar,
      &::-webkit-progress-inner-element {
        background: none;
        box-sizing: content-box;
        height: 21px;
        width: 100%;
      }
    }
  }

  .signature-count-progress-footer {
    @include responsive-margin(3, top);

    display: flex;
    justify-content: space-between;
  }
}

#trending-petitions {
  ul {
    li {
      @include media-query($from: laptop) {
        max-width: calc((map.get($breakpoint-max-widths, laptop) - 90px) / 3);
      }

      @include media-query($from: desktop) {
        max-width: calc((map.get($breakpoint-max-widths, desktop) - 90px) / 3);
      }
    }
  }
}

